--- a/styles.css
+++ b/styles.css
@@ -60,6 +60,13 @@ a:hover {
     border: solid 1px #777777;
 }
 
+/* Firefox puts an inner border on buttons */
+::-moz-focus-inner {
+    outline: none;
+    border: none;
+    padding: 0px;
+}
+
 button { /*destyle buttons*/
     -webkit-appearance: none;
     -moz-appearance: none;
@@ -128,7 +135,7 @@ table, tr, td {
 
 #menu-top-container {
     margin: 0px 18px;
-    min-width: 1176px;
+    min-width: 1182px;
     height: 30px;
 }
 
@@ -142,7 +149,7 @@ table, tr, td {
 
 #menu-buttons-container {
     margin: 12px 18px;
-    min-width: 1176px;
+    min-width: 1182px;
     height: 30px;
 }
 
@@ -230,13 +237,13 @@ input[type="file"] { /*hack to treat the load button as an HTML file input but s
     right: 12px;
     bottom: 12px;
     left: 12px;
-    min-width: 1176px;  
+    min-width: 1182px;  
 }
 
 #main-interface-centering-container {
     position: relative;
     margin: 0px auto;
-    width: 1176px;
+    width: 1182px;
     height: 100%;
 }
 
@@ -315,11 +322,18 @@ input[type="file"] { /*hack to treat the load button as an HTML file input but s
     height: 2px;
 }
 
+.group-table-scroll-hider { /*to tuck away the scroll bars in firefox. sheesh.*/
+    position: relative;
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+}
+
 .group-table-container{
     position: absolute;
     top: 144px;
     bottom: 0px;
-    overflow: scroll;
+    overflow-y: scroll;
 }
 
 .group-table {
@@ -407,7 +421,7 @@ input[type="file"] { /*hack to treat the load button as an HTML file input but s
 
 #empty-state-panel {
     position: absolute;
-    width: 528px;
+    width: 534px;
     height: 540px;
     margin: -6px 0px 0px -18px;
     background-color: rgba(250,250,250,0.95);
@@ -445,9 +459,8 @@ input[type="file"] { /*hack to treat the load button as an HTML file input but s
     float: left;
     margin: 0px 0px 0px 12px;
     padding: 6px 18px 0px 18px;
-    width: 492px;
+    width: 498px;
     height: 534px;
-    overflow: scroll;
     background-color: #fafafa;
 }
 
@@ -615,8 +628,7 @@ input[type="file"] { /*hack to treat the load button as an HTML file input but s
     bottom: 12px;
     left: 12px;
     padding: 12px;
-    min-width: 1152px;
-    overflow: scroll;
+    min-width: 1158px;
     background-color: #ececec;
 }
 
@@ -654,7 +666,7 @@ input[type="file"] { /*hack to treat the load button as an HTML file input but s
     bottom:30px;
     left:36px;
     right: 36px;
-    overflow:scroll;
+    overflow-y:scroll;
 }
 
 #about-text-container {
@@ -675,9 +687,9 @@ input[type="file"] { /*hack to treat the load button as an HTML file input but s
     bottom:30px;
     left:36px;
     right:36px;
-    min-width: 1128px;
+    min-width: 1134px;
     padding-top: 6px;
-    overflow:scroll;
+    overflow-y:scroll;
     background-color:#fafafa;
 }
 
